--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.2",
     "mobx": "4.8.0",
     "mobx-react": "^5.4.3",
     "react": "^16.8.6",
